# Tatami

./: .gitignore  CMakeLists.txt  README.md  tatami_plugin.cpp  tatami_plugin.h
imports/com/planed/tatami/: Action.qml  ActionSet.qml  ActionsDialog.qml  Application.qml  BooleanField.qml  Breadcrumbs.qml  ComboBoxField.qml  ConfirmDialog.qml  DateField.qml  Dialog.qml  EditActions.qml  Fields.qml  Filter.qml  Form.qml  FormGroup.qml  FormLabel.qml  GridTable.qml  IndexActions.qml  Menu.qml  MenuEntry.qml  MessageDialog.qml  MultiplePicker.qml  MultiplePickerActions.qml  NumberField.qml  PaginatedActions.qml  PickerField.qml  PromptDialog.qml  ShortcutHint.qml  TableCell.qml  TableEditor.qml  TableFields.qml  TableHelpers.js  TableHorizontalHeader.qml  TableNavigation.qml  TablePicker.qml  TableStyle.qml  TableVerticalHeader.qml  TableView.qml  TextField.qml  ToolBar.qml  (+3 more)
tatami/: Tatami_global.h  adaptivefontsize.cpp  adaptivefontsize.h  controller.cpp  controller.h  datevalidator.cpp  datevalidator.h  displayservice.cpp  displayservice.h  edit_controller.cpp  edit_controller.h  httpclient.cpp  httpclient.h  icons.cpp  icons.h  jsvaluetofunction.h  metaservice.cpp  metaservice.h  service.h  sessionanalytics.cpp  sessionanalytics.h  subsetservice.cpp  subsetservice.h  tablemodel.cpp  tablemodel.h
tatami/controller/: globals.cpp  globals.h  listnavigation.cpp  listnavigation.h  multiplepicker.cpp  multiplepicker.h  pagination.cpp  pagination.h  requestcount.cpp  requestcount.h
tatami/service/: filter.cpp  filter.h  httpservice.cpp  httpservice.h  jsonmodelstore.cpp  jsonmodelstore.h  modelstore.cpp  modelstore.h  notifiableservice.cpp  notifiableservice.h  paginatedstore.cpp  paginatedstore.h
tatami/tests/: httpclient.cpp  httpclient.h
tests/: CMakeLists.txt
